@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot.c,v 1.89 2006/08/05 21:33:15 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot.c,v 1.90 2006/08/22 03:08:12 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot.c */
@@ -533,7 +533,7 @@ main(int argc, char **argv)
     else
 	show_version(NULL); /* Only load GPVAL_COMPILE_OPTIONS */
 
-    update_gpval_variables(1);  /* update GPVAL_ variables available to user */
+    update_gpval_variables(3);  /* update GPVAL_ variables available to user */
 
 #ifdef VMS
     /* initialise screen management routines for command recall */
